--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.12"
 requests = "^2.32.3"
 pandas = "^2.2.2"
+pandas-stubs = "^2.2.2.240909"
 
 
 [tool.poetry.group.dev.dependencies]
