--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.12"
 requests = "^2.32.3"
 pandas = "^2.2.2"
 pandas-stubs = "^2.2.2.240909"
+freecurrencyapi = "^0.1.0"
+coinpaprika-sdk = "^1.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
