--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pandas-stubs = "^2.2.2.240909"
 freecurrencyapi = "^0.1.0"
 coinpaprika-sdk = "^1.0.0"
 python-dotenv = "^1.0.1"
+types-requests = "^2.32.0.20240914"
 
 
 [tool.poetry.group.dev.dependencies]
